fix scrollbar

--- a/src/components/style.scss
+++ b/src/components/style.scss
@@ -264,10 +264,13 @@ html {
 }
 
 .home {
-  height: 100vh;
-  width: 100vw;
+  width: 100%;
+  height: 100%;
   font-family: "National Park";
   --blue: #00A3FF; 
+
+
+
 
   a {
     color: white;
@@ -276,6 +279,16 @@ html {
   ::selection {
     background: var(--blue);
     color: white;
+  }
+
+
+  .container {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    box-sizing: border-box;
+    overflow-x: hidden;
+    overflow-y: hidden;
   }
 
 
@@ -320,10 +333,6 @@ html {
     width: 100%;
     height: 100%;
     background-color: rgba(255, 255, 255, 0.8);
-  }
-
-  .carousel::-webkit-scrollbar{
-    display: none;
   }
 
   .carousel-title {
@@ -376,50 +385,65 @@ html {
     text-align: center;
   } 
 
-  .footer {
-    position: absolute;
-    bottom: 0;
+  .footer-container {
     width: 100%;
-    z-index: 3;
-    height: 20rem;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    overflow-y: scroll;
-    scrollbar-width: none;
-    padding-top: 5rem;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
     pointer-events: none;
   }
 
-  .footer::-webkit-scrollbar{
-    display: none;
-  }
-  
   .footer-content {
-    margin-top: 18rem;
-    padding-bottom: 1rem;
+    position: relative;
+    top: 0;
+    left: 0;
     width: 100%;
+    pointer-events: none;
+    overflow-y: scroll;
+    scrollbar-width: none;
+  }
+
+  .footer-content:before {
+    position: absolute;
+    top: 0;
+    left: 0;
+  
+  }
+
+  .footer-text-container {
+    overflow: hidden;
+    pointer-events: none;
+    display: flex;
+    flex-direction: column;
     height: fit-content;
     color: white;
     text-align: center;
     font-weight: 500;
     line-height: 21px;
-    -webkit-box-shadow: 0px 0px 18px 50px #00A3FF; 
-    box-shadow: 0px 0px 18px 50px #00A3FF;
+    width: 100%;
+  }
+  
+  .footer-text {
+    margin-top: calc(100vh - 2rem);
+    pointer-events: auto;
+    overflow: hidden;
+    -webkit-box-shadow: 0px 0px 13px 30px var(--blue); 
+    box-shadow: 0px 0px 13px 30px var(--blue);
     background-color: var(--blue);
     display: flex;
     flex-direction: column;
     align-items: center;
-    pointer-events: auto;
   }
-
-  .footer-content p{
+  
+  .footer-text p {
     max-width: 1100px;
     padding: 0;
     margin: 0;
     font-size: 15px;
     padding-bottom: 1rem;
   }
+
 
   .project-titles {
     display: flex;
@@ -444,6 +468,10 @@ html {
   }
 }
 
+.home::-webkit-scrollbar{
+  display: none;
+}
+
 @media screen and (max-width: 800px) {
 .home {
 
@@ -457,7 +485,7 @@ html {
     margin-bottom: -1rem;
   }
 
-  .footer-content {
+  .footer-text {
     font-size: 11px;
     line-height: unset;
     padding: 0 0.25rem;
